--- a/weatherly.css
+++ b/weatherly.css
@@ -220,6 +220,13 @@ p
   font-weight: 600;
   white-space: nowrap;
 }
+#map
+{
+  height: 400px;
+  border-radius: 10px;
+  width: 100%;
+  margin-top: 20px;
+}
 
 /* Dark Mode Toggle effects */
 body.dark-mode
