--- a/weatherly.css
+++ b/weatherly.css
@@ -1,26 +1,26 @@
 body
 {
-  font-family: Verdana, Geneva, Tahoma, sans-serif, sans-serif;
+  font-family: Verdana, Tahoma, sans-serif, sans-serif;
   margin: 0;
   padding: 0;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: auto;
+  /* justify-content: center;
+  align-items: center; */
+  overflow-x: hidden;
   transition: background-color 0.35s, color 0.35s;
 }
 
 .container
 {
-  background-color: #d2bf69;
-  position: relative;
+  /*background-color: #d2bf69;*/
+  position: relative ;
   text-align: center;
   margin: 0 10px;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  width: 90%;
-  max-width: 100%;
+  height: 100vh;
+  width: 100vw;
   overflow-y: none;
 }
 
@@ -78,32 +78,45 @@ input::placeholder
 }
 .clear-input
 {
-  font-size: 15px;
+  font-size: 13px;
   position: absolute;
   top: 26%;
   right: fixed;
   margin-left: -10px;
+  padding: 2px 4px;
   transform: translateX(-100%);
   background: transparent;
   border: none;
   cursor: pointer;
+  opacity: 35%;
 }
 
 /*button*/
 .get-weather-btn
 {
-  background-color: transparent;
-  color: ghostwhite;
-  border: none;
+  font-size: 12px;
+  position: absolute;
+  right: fixed;
+  margin-left: -10px;
+  padding: 2px 4px;
+  transform: translateX(-850%);
   padding: 10px;
-  border-radius: 50px;
+  background: transparent;
+  border: none;
   cursor: pointer;
-}
-.get-weather-btn i
-{
-  font-size: 20px;
+  opacity: 25%;
 }
 
+.get-weather-btn i
+{
+  font-size: 15px;
+}
+
+.clear-input:hover,
+.get-weather-btn:hover
+{
+  opacity: 50%;
+}
 /*current weather*/
 .weatherInfo
 {
@@ -222,10 +235,8 @@ p
 }
 #map
 {
-  height: 400px;
-  border-radius: 10px;
-  width: 100%;
-  margin-top: 20px;
+  height: 100vh;
+  width: 100vw;
 }
 
 /* Dark Mode Toggle effects */
@@ -284,6 +295,15 @@ body.dark-mode .fas
   color: rgb(255, 247, 14);
 }
 
+/* .UI,
+.panel
+{
+  position: fixed;
+  top: 10px;
+  left: 10px;
+  z-index: 1000; /* Ensure the UI is above the map 
+  visibility: visible;
+} */
 /* Responsive adjustments */
 @media screen and (max-width: 777px)
 {
